fix lineheight for the menu items hover.... stopped jumping down when item is hovered
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@33360 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -615,7 +615,7 @@ div.innertube #record-toolbox li {
 
 #menu a:hover, #menu a:active {
 	display: block;
-	line-height: 14px;
+	line-height: 13px;
 	width: auto;
 	text-decoration: none;
 	z-index: 500;
